--- a/src/components/Layout/Layout.css
+++ b/src/components/Layout/Layout.css
@@ -3,7 +3,7 @@
     background-color: antiquewhite;
     padding-left: 4%;
     padding-right: 4%;
-    padding-bottom: 16px;
+    padding-bottom: 40px;
 }
 
 .header {
@@ -46,6 +46,7 @@ h1 {
     margin-top: auto;
     margin-bottom: auto;
     border-radius: 10px;
+    margin-left: 5px;
 }
 
 .search-input {
