--- a/src/components/Results/Card/Card.css
+++ b/src/components/Results/Card/Card.css
@@ -1,3 +1,21 @@
 .card-container {
-    border: cornflowerblue 1px solid;
+    border: cornflowerblue 2px solid;
+    border-radius: 10px;
+    cursor: pointer;
+}
+
+.card-container:hover {
+    background-color: rgb(255, 250, 244);
+}
+
+img {
+    width: 100%;
+    height: 400px;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    border-bottom: 1px solid cornflowerblue;
+}
+
+h3 {
+    margin-left: 10px;
 }
