--- a/src/components/Results/Results.css
+++ b/src/components/Results/Results.css
@@ -4,3 +4,21 @@
     margin-top: 20px;
     gap: 10px;
 }
+
+@media only screen and (max-width: 1000px) {
+    .results {
+        grid-template-columns: repeat(4, minmax(0, 1fr));
+    }
+}
+
+@media only screen and (max-width: 600px) {
+    .results {
+        grid-template-columns: repeat(2, minmax(0, 1fr));
+    }
+}
+
+@media only screen and (max-width: 400px) {
+    .results {
+        grid-template-columns: repeat(1, minmax(0, 1fr));
+    }
+}
