--- a/src/components/Tabs/Tabs.css
+++ b/src/components/Tabs/Tabs.css
@@ -1,13 +1,12 @@
 .tabs-container  {
-    top: 0;
-    width: fit-content;
-    /* border: cornflowerblue 4px solid; */
     padding-left: 20px;
     padding-right: 20px;
-    /* gap: 20px;
-    border-radius: 30px; */
-    margin: auto;
     display: flex;
+    border-bottom: 1px solid cornflowerblue;
+    padding-bottom: 10px;
+    padding-top: 10px;
+    margin: auto;
+    justify-content: center;
 }
 
 .tab-left {
@@ -32,6 +31,7 @@
     font-weight: 600;
     font-size: small;
     cursor: pointer;
+    color: cornflowerblue;
 }
 
 .active {
