--- a/src/components/Layout/Layout.css
+++ b/src/components/Layout/Layout.css
@@ -1,6 +1,6 @@
 .layout-container {
     min-height: 100vh;
-    background-color: antiquewhite;
+    background-color: rgb(248, 216, 174);
     padding-left: 4%;
     padding-right: 4%;
     padding-bottom: 40px;
@@ -8,6 +8,7 @@
 
 .header {
     display: flex;
+    justify-content: space-between;
     height: fit-content;
     gap: 2%;
 }
@@ -25,6 +26,26 @@ h1 {
     width: fit-content;
     color: cornflowerblue;
     font-weight: 1000;
+}
+
+.children-container {
+    background-color: whitesmoke;
+    border-radius: 20px;
+    height: fit-content;
+    min-height: 500px;
+    padding: 20px;
+    border: solid 1px cornflowerblue;
+}
+
+.footer {
+    position: fixed;
+    text-align: center;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    font-size: xx-small;
+    color: gray;
+    background-color: antiquewhite;
 }
 
 .search-icon::before {
@@ -77,39 +98,11 @@ h1 {
 .show-search {
     flex-grow: 1;
     background-color: #fff;
-
+    border: 1px solid cornflowerblue;
 }
 
 .search-icon {
     width: 25px;
     height: 25px;
-}
-
-.children-container {
-    background-color: white;
-    border-radius: 20px;
-    height: fit-content;
-    min-height: 500px;
-    padding: 10px;
-}
-
-.footer {
-    position: fixed;
-    text-align: center;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    font-size: xx-small;
-    color: gray;
-    background-color: antiquewhite;
-}
-
-.camera-icon {
-    z-index: 1;
-    height: 40%;
-    width: 40%;
-    margin: auto;
-    color: cornflowerblue;
-    opacity: 0.1;
-    transform: rotate(-20deg);
+    margin-right: 10px;
 }
