--- a/src/components/Tabs/Tabs.css
+++ b/src/components/Tabs/Tabs.css
@@ -2,7 +2,7 @@
     padding-left: 20px;
     padding-right: 20px;
     display: flex;
-    border-bottom: 1px solid cornflowerblue;
+    /* border-bottom: 1px solid cornflowerblue; */
     padding-bottom: 10px;
     padding-top: 10px;
     margin: auto;
@@ -26,12 +26,14 @@
 }
 
 .tab {
+    width: 100px;
     padding-right: 10px;
     padding-left: 10px;
     font-weight: 600;
     font-size: small;
     cursor: pointer;
     color: cornflowerblue;
+    text-align: center;
 }
 
 .active {
