fixed search, completed details screen logic

--- a/src/components/Results/Card/Card.css
+++ b/src/components/Results/Card/Card.css
@@ -9,7 +9,7 @@
     background-color: wheat;
 }
 
-img {
+.card-image {
     width: 100%;
     border-top-left-radius: 8px;
     border-top-right-radius: 8px;
