--- a/src/components/Details/Details.css
+++ b/src/components/Details/Details.css
@@ -4,8 +4,39 @@
 }
 
 .details-video {
-    border: black solid 1px;
+    border: cornflowerblue solid 2px;
     width: 100%;
+    height: 700px;
+}
+
+@media only screen and (max-width: 1100px) {
+    .details-video {
+        height: 550px;
+    }
+}
+
+@media only screen and (max-width: 900px) {
+    .details-video {
+        height: 450px;
+    }
+}
+
+@media only screen and (max-width: 700px) {
+    .details-video {
+        height: 350px;
+    }
+}
+
+@media only screen and (max-width: 500px) {
+    .details-video {
+        height: 200px;
+    }
+}
+
+@media only screen and (max-width: 400px) {
+    .details-video {
+        height: 150px;
+    }
 }
 
 .details-image {
